<resources>
    <string name="app_name">Clipboard Sync</string>

    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="main_fragment_label">Main</string>
    <string name="hello_first_fragment">Start application</string>
    <string name="send_button_text">Just send it!</string>
    <string name="save_files_button_text">Received %d Files</string>
    <string name="send_files_button_text">Send Files</string>
    <string name="send_certificate_button">Send Certificate</string>
    <string name="receive_certificate_button">Receive Certificate</string>
    <string name="copy_and_send_button_text">Copy &amp; Send</string>
    <string name="empty_clipboard">Empty clipboard</string>
    <string name="edit_input_hint">Enter text to send</string>
    <string name="no_certificate_specified">No certificate specified</string>
    <string name="sent_received_text">sent: %d received: %d</string>
    <string name="remove_files_button_text">Remove Files</string>

</resources>