<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/buttonFilesLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="30dp"
        android:gravity="end"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/buttonLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/receive_certificate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receive_certificate_button"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/send_certificate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_certificate_button"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_files_button_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/remove_files_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_files_button_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/send_files_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_files_button_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonFilesLayout">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="24dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:lines="7"
            android:text="@string/hello_first_fragment"
            app:layout_constraintBottom_toTopOf="@id/copy_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonFilesLayout" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/send_received_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sent_received_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/toggle_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/send_received_view" />

        <Button
            android:id="@+id/send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toggle_button" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/copy_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_input_hint"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/send_button" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>